<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/nav_menu_textA">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_menu_home"
                        android:icon="@drawable/home_icon"
                        android:title="@string/nav_menu_text1" />
                    <item
                        android:id="@+id/nav_menu_profile"
                        android:icon="@drawable/profile_icon"
                        android:title="@string/nav_menu_textD" />
<!--                    <item-->
<!--                        android:id="@+id/nav_menu_findMechanic"-->
<!--                        android:icon="@drawable/search_icon"-->
<!--                        android:title="@string/nav_menu_text2" />-->
                    <item
                        android:id="@+id/nav_menu_requests"
                        android:icon="@drawable/requests_icon"
                        android:title="@string/nav_menu_text3" />
                    <item
                        android:id="@+id/nav_menu_task_requests"
                        android:icon="@drawable/requests_icon"
                        android:title="@string/nav_menu_textE" />
                    <item
                        android:id="@+id/nav_menu_taskHistory"
                        android:icon="@drawable/history_icon"
                        android:title="@string/nav_menu_text4" />
                    <item
                        android:id="@+id/nav_menu_requestHistory"
                        android:icon="@drawable/history_icon"
                        android:title="@string/nav_menu_textF" />
<!--                    <item-->
<!--                        android:id="@+id/nav_menu_income"-->
<!--                        android:icon="@drawable/income_icon"-->
<!--                        android:title="@string/nav_menu_textB" />-->
                </group>
            </menu>
        </item>

        <item android:title="@string/nav_menu_textC">
            <menu>
                <group android:checkableBehavior="single">
<!--                    <item-->
<!--                        android:id="@+id/nav_menu_help"-->
<!--                        android:icon="@drawable/help_icon"-->
<!--                        android:title="@string/nav_menu_text7" />-->
                    <item
                        android:id="@+id/nav_menu_settings"
                        android:icon="@drawable/settings_icon"
                        android:title="@string/nav_menu_text8" />
                    <item
                        android:id="@+id/nav_menu_logout"
                        android:icon="@drawable/logout_icon"
                        android:title="@string/nav_menu_text9" />
                </group>
            </menu>
        </item>

    </group>

</menu>