<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/uta_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserTypeActivity">

    <TextView
        android:id="@+id/uta_createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/user_type_text5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/user_type_text2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/user_type_text1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/uta_mechanicBtn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/user_type_text4"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/uta_userBtn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/user_type_text3"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/uta_mechanicBtn"
        app:layout_constraintStart_toEndOf="@+id/uta_userBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>